httpbin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: ghcr.io/mccutchen/go-httpbin:2.18.3
        ports:
        - containerPort: 8080
          name: http
