httpbin/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  parentRefs:
  - name: internet
    namespace: envoy-gateway-system
  hostnames:
  - httpbin.desertbluffs.com
  rules:
  - backendRefs:
    - name: httpbin
      port: 80
